<resources>
    <string name="app_name">UniveFinal</string>
    <string name="action_settings">Settings</string>
    <string name="buy_car">Een auto kopen</string>
    <string name="vehicle_menu_heading">Een auto kopen</string>
    <string name="retrieve_vehicle_info">Ophalen voertuiginformatie</string>
    <string name="buy_house">Een huis kopen</string>
    <string name="health_insurance">Een zorgverzekering kiezen</string>
    <string name="body_shop">Een schadehersteller vinden</string>
    <string name="screen1_text">Nog geen klant bij Univé? Ontdek hoe we toch voor je klaarstaan met onze slimme diensten.</string>
    <string name="help_me">Help mij, want ik wil:</string>
    <string name="title_help">Hulp nodig van Univé?</string>
    <string name="title_licensescan">Kentekenscan</string>
    <string name="title_activity_license_plate_scan"></string>
    <string name="title_vehicle_info">Voertuiginformatie</string>
    <string name="title_activity_vehicle_information">Uw auto</string>
    <string name="scan_with_camera">Scan het kenteken met uw camera</string>
    <string name="what_we_found">Dit is wat we over uw auto hebben gevonden:</string>
    <string name="vehicle_titles">Kleur:\nGewicht:\nZitplaatsen:\nCataloguswaarde:\nVermogen:</string>
    <string name="instructions">Scan uw kenteken met de camera.\nDe Univé app herkent uw kenteken.\nIndien het scannen met uw camera niet lukt,\n voer dan uw kenteken handmatig in.</string>
    <string name="readmore">Toon meer informatie</string>
    <string name="title_activity_license_error">LicenseError</string>
    <string name="vehicle_error_heading">Het ophalen van voertuiggegevens is niet gelukt</string>
    <string name="vehicle_error_text">Er is iets misgegaan tijdens het ophalen van de voertuiggegevens.</string>
    <string name="network_error_heading">U heeft geen internetverbinding.</string>
    <string name="title_activity_network_error"></string>
    <string name="title_activity_zorg_check">ZorgCheck</string>
    <string name="title_activity_hypotheek_check">HypotheekCheck</string>
    <string name="title_activity_schade_service">SchadeService</string>
    <string name="vehicle_tips">Tips bij aankoop auto</string>
    <string name="privateLease">Bekijk private lease</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_web_view_controller">WebViewController</string>
    <string name="title_cardview_general">Algemeen</string>
    <string name="title_cardview_vehicle">Voertuiginformatie</string>
    <string name="title_cardview_costs">Kosten per maand</string>
    <string name="try_again">Probeer opnieuw</string>
    <string name="vehicle_info_labels">APK datum\nBrandstoftype\nGewicht\nVermogen\nVerbruik</string>
    <string name="general_info_labels">Uitvoering\nBouwjaar\nZitplaatsen\nAantal deuren\nKleur</string>
    <string name="vehicle_costs_labels">Afschrijving\nWegenbelasting\nVerzekering WA\nOnderhoud\nBanden</string>
</resources>
